Ghostery Feature button alignment and styling fixes. Centered page stats.

--- a/app/scss/partials/_ghostery_feature.scss
+++ b/app/scss/partials/_ghostery_feature.scss
@@ -27,123 +27,12 @@
 /*
 .sub-component.ghostery-features {
 	.button {
-		width: 150px;
-		height: 45px;
-		font-size: 11px;
-		line-height: 1.5;
-		color: #4a4a4a;
-		border-color: #cccccc;
-		background-color: #ffffff;
-		margin-bottom: 0;
-		box-shadow: inset 0 0 0 0 rgba($white, 0);
-
-		transition: background-image 0.25s ease-out,
-		background-color 0.25s ease-out,
-		border-color 0.25s ease-out,
-		box-shadow 0.25 ease-out,
-		color 0.25s ease-out;
 		&:hover {
 			background-color: #efefef;
 		}
 	}
-	.button.active.button-trust {
-		color: #ffffff;
-		border-color: #85b329;
-		background-color: #9ecc42;
-		box-shadow: inset 0px 1px 7px 2px #85b329;
-		&:hover {
-			background-color: #85b329;
-		}
-	}
-	.button.active.button-restrict {
-		color: #ffffff;
-		border-color: #ce273c;
-		background-color: #e74055;
-		box-shadow: inset 0px 1px 7px 2px #ce273c;
-		&:hover {
-			background-color: #ce273c;
-		}
-	}
-	.button.active.ab-pause {
-		color: #ffffff;
-		border-color: #2092bf;
-		background-color: #1dafed;
-		box-shadow: inset 0px 1px 7px 2px #2092bf;
-		&:hover {
-			background-color: #0093bd;
-		}
-	}
 
 	.full-height { height: 100%; }
-	.button-trust .button-text,
-	.button-restrict .button-text {
-		padding: 0 10px 0 30px;
-		background-repeat: no-repeat;
-		background-position: 0 center;
-		background-size: 14px 14px;
-	}
-	.button-trust .button-text {
-		background-image: buildIconTrust(#4a4a4a);
-	}
-	.button-trust.active .button-text {
-		background-image: buildIconTrust(#ffffff);
-	}
-	.button-restrict .button-text {
-		background-image: buildIconRestrict(#4a4a4a);
-	}
-	.button-restrict.active .button-text {
-		background-image: buildIconRestrict(#ffffff);
-	}
-
-	.button-group.inactive {
-		.button {
-			color: #a4a4a4;
-			border-color: #e5e5e5;
-			background-color: #ffffff;
-			box-shadow: inset 0 0 0 0 rgba($white, 0);
-		}
-		.button.active.button-trust {
-			color: #ffffff;
-			border-color: #b8e65c;
-			background-color: #b8e65c;
-		}
-		.button.active.button-restrict {
-			color: #ffffff;
-			border-color: #ff8da2;
-			background-color: #ff8da2;
-		}
-		.button.active.ab-pause {
-			color: #ffffff;
-			border-color: #a4d4f2;
-			background-color: #a4d4f2;
-		}
-		.button-trust .button-text {
-			background-image: buildIconTrust(#a4a4a4);
-		}
-		.button-trust.active .button-text {
-			background-image: buildIconTrust(#ffffff);
-		}
-		.button-restrict .button-text {
-			background-image: buildIconRestrict(#a4a4a4);
-		}
-		.button-restrict.active .button-text {
-			background-image: buildIconRestrict(#ffffff);
-		}
-	}
-
-	.button-group.stacked .button {
-		height: 35px;
-		margin-bottom: 0;
-	}
-	.button-group.stacked .button.condensed {
-		width: 66px;
-		height: 41px;
-		.button-text {
-			padding: 10px;
-			font-size: 9px;
-			background-position: center center;
-		}
-	}
 
 	.button-top {
 		border-bottom-left-radius: 0;
@@ -174,85 +63,124 @@
 }
 */
 
-/*
-.button {
-	color: #4a4a4a;
-	border-color: #cccccc;
-	background-color: #ffffff;
-	box-shadow: inset 0 0 0 0 rgba($white, 0);
-*/
+.GhosteryFeatureButton__text {
+	background-repeat: no-repeat;
+	background-size: 14px 14px;
+}
 
 .GhosteryFeatureButton {
-	width: 150px;
-	height: 45px;
-
 	transition: background-image 0.25s ease-out,
 		background-color 0.25s ease-out,
 		border-color 0.25s ease-out,
 		box-shadow 0.25s ease-out,
 		color 0.25s ease-out;
-}
 
-.GhosteryFeatureButton--FoundationButtonOverrides {
+	// Foundation .button overrides
+	margin-bottom: 0;
 	line-height: 1.5;
 	font-size: 11px;
-	margin-bottom: 0;
 }
 
-.GhosteryFeatureButton--inactive {
+.GhosteryFeatureButton--normal,
+.GhosteryFeatureButton--short {
+	width: 150px;
+
+	.GhosteryFeatureButton__text {
+		padding: 0 10px 0 30px;
+		background-position: 0 center;
+	}
+}
+
+.GhosteryFeatureButton--normal {
+	height: 45px;
+}
+
+.GhosteryFeatureButton--short {
+	height: 35px;
+}
+
+.GhosteryFeatureButton--narrow {
+	width: 66px;
+	height: 41px;
+
+	.GhosteryFeatureButton__text {
+		padding: 10px;
+		font-size: 9px;
+		background-position: center center;
+	}
+}
+
+.GhosteryFeatureButton--inactive.clickable {
 	color: $tundora;
 	border-color: #cccccc;
 	background-color: $white;
 	box-shadow: inset 0 0 0 0 rgba($white, 0);
+	&:hover { color: $tundora; }
 
-	&:hover {
-		color: $tundora;
+	&.trust .GhosteryFeatureButton__text {
+		background-image: buildIconTrust($tundora);
+	}
+
+	&.restrict .GhosteryFeatureButton__text {
+		background-image: buildIconRestrict($tundora);
 	}
 }
 
-.GhosteryFeatureButton--active {
+.GhosteryFeatureButton--inactive.not-clickable {
+	color: #a4a4a4;
+	border-color: #e5e5e5;
+	background-color: #ffffff;
+	box-shadow: inset 0 0 0 0 rgba($white, 0);
+
+	&.trust .GhosteryFeatureButton__text {
+		background-image: buildIconTrust(#a4a4a4);
+	}
+
+	&.restrict .GhosteryFeatureButton__text {
+		background-image: buildIconRestrict(#a4a4a4);
+	}
+}
+
+.GhosteryFeatureButton--active.clickable {
 	color: $white;
-}
 
-.GhosteryFeatureButton--trust.GhosteryFeatureButton--active {
-	border-color: #85b329;
-	background-color: $atlantis;
-	box-shadow: inset 0px 1px 7px 2px #85b329;
+	&.trust {
+		border-color: #85b329;
+		background-color: $atlantis;
+		box-shadow: inset 0px 1px 7px 2px #85b329;
+	}
+	&.trust:hover { background-color: #85b329; }
+	&.trust .GhosteryFeatureButton__text {
+		background-image: buildIconTrust($white);
+	}
 
-	&:hover {
-		background-color: #85b329;
+	&.restrict {
+		border-color: #ce273c;
+		background-color: $red;
+		box-shadow: inset 0px 1px 7px 2px #ce273c;
+	}
+	&.restrict:hover { background-color: #ce273c; }
+	&.restrict .GhosteryFeatureButton__text {
+		background-image: buildIconRestrict($white);
 	}
 }
 
-.GhosteryFeatureButton--restrict.GhosteryFeatureButton--active {
-	border-color: #ce273c;
-	background-color: $red;
-	box-shadow: inset 0px 1px 7px 2px #ce273c;
-
-	&:hover {
-		background-color: #ce273c;
+.GhosteryFeatureButton--active.not-clickable {
+	&.trust {
+		color: $white;
+		border-color: #b8e65c;
+		background-color: #b8e65c;
 	}
-}
+	&.trust .GhosteryFeatureButton__text {
+		background-image: buildIconTrust($white);
+	}
 
-.GhosteryFeatureButton__text {
-	padding: 0 10px 0 30px;
-	background-repeat: no-repeat;
-	background-position: 0 center;
-	background-size: 14px 14px;
-}
-
-.GhosteryFeatureButton--trust.GhosteryFeatureButton--inactive .GhosteryFeatureButton__text {
-	background-image: buildIconTrust($tundora);
-
-}
-.GhosteryFeatureButton--trust.GhosteryFeatureButton--active .GhosteryFeatureButton__text {
-	background-image: buildIconTrust($white);
-
-}
-.GhosteryFeatureButton--restrict.GhosteryFeatureButton--inactive .GhosteryFeatureButton__text {
-	background-image: buildIconRestrict($tundora);
-
-}
-.GhosteryFeatureButton--restrict.GhosteryFeatureButton--active .GhosteryFeatureButton__text {
-	background-image: buildIconRestrict($white);
+	&.restrict {
+		color: $white;
+		border-color: #ff8da2;
+		background-color: #ff8da2;
+	}
+	&.restrict .GhosteryFeatureButton__text {
+		background-image: buildIconRestrict($white);
+	}
 }
