--- a/app/scss/partials/_summary.scss
+++ b/app/scss/partials/_summary.scss
@@ -30,6 +30,10 @@
 	color: #4a4a4a;
 }
 
+.Summary__pageStatsContainer {
+	text-align: center;
+}
+
 .Summary__pageStatContainer {
 	text-align: center;
 }
@@ -166,6 +170,10 @@
 
 .Summary__spaceTaker {
 	height: 162px;
+}
+
+.Summary__ghosteryFeaturesContainer {
+	text-align: center;
 }
 
 .Summary__ghosteryFeatureContainer {
